# portfolio

./: Cargo.toml  app.js  index.html  index.scss  portfolio.json
src/: app.rs  main.rs  portfolio.rs
txt/: cv.txt  cv_portfolio.txt  hex_game.txt  moinkroft.txt  portfolio.txt  psi.txt  railsplus.txt  text_game.txt  tower_defence.txt  zeyzewu.txt
