[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "*", features = [
    "DomRect",
    "Element",
    "HtmlDivElement",
    "DomTokenList",
    "IntersectionObserver",
    "IntersectionObserverInit",
] }
wasm-bindgen = { version = "*" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

include_dir = "0.7.3"